--- a/css/sitecss.css
+++ b/css/sitecss.css
@@ -87,7 +87,7 @@ div.content
 	background: -webkit-linear-gradient(left, #808080 20%, #5E5E5E);	/* chrome support */
 	background: -moz-linear-gradient(left, #808080 20%, #5E5E5E);	/* firefox support */
 	margin: 5px;
-	margin-top: 30px;
+	margin-top: 20px;
 	margin-bottom: 60px;
 	padding: 10px;
 	border: 10px outset #A1A1A1;
@@ -128,10 +128,42 @@ div.issue
 	border-top: 1px solid black;
 }
 
+nav ul 
+{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+	height: 100px;
+	line-height: 100px;
+}
+
+nav li
+{
+	float: left;
+    display: block;
+    color: white;
+    text-decoration: none;
+}
+
+#title
+{
+	float: left;
+	padding-left: 30px;
+	font-size: 36px;
+	font-weight: bold;
+}
+
+#account
+{
+	float: right;
+	padding-right: 40px;
+}
+
 body 
 {
 	overflow: scroll;
-	margin: 5px auto;
 	background: #595959;	/* for browsers that don't support gradient */
 	background: -webkit-linear-gradient(top, #595959, #262626);	/* chrome support */
 	background: -moz-linear-gradient(top, #595959, #262626);	/* firefox support */
