--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,93 +1,190 @@
-body 
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+
+*
 {
-	overflow: hidden;
-	height: 100vh;
-	background: #595959;	/* for browsers that don't support gradient */
-	background: -webkit-linear-gradient(top, #595959, #262626);	/* chrome support */
-	background: -moz-linear-gradient(top, #595959, #262626);	/* firefox support */
-	background-attachment: fixed;	/* fixes cut off of background */
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
 
-@media screen and (max-width: 1920px) 
+html
 {
-	body
-	{
-		width: 1920px;
-	}
+	height: 100%;
 }
 
-@media screen and (max-width: 1366px) 
+body
 {
-	body
-	{
-		width: 1366px;
-	}
+	background-color: #353531;
+	color: #C4CBCA;
+	margin: 0;
+	font-family: 'PT', sans;
+	height: 100%;
 }
 
-@media screen and (max-width: 1280px) 
+header
 {
-	body
-	{
-		width: 1280px;
-	}
+	position: absolute;
+	background-color: #016FB9;
+	width: 100%;
+	height: 70px;
 }
 
-div.half
+#header-inner
 {
-    float: left;
-	width: 50%;
-    height: 100%;
-	
-    display: flex;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+#logo
+{
+	float: left;
+	width: 200px;
+	height: 70px;
+	background: url(../img/logo.png) no-repeat center;
+}
+
+nav
+{
+	padding-top: 10px;
+}
+
+nav ul
+{
+	list-style-type: none;
+}
+
+nav ul li
+{
+	font-size: 130%;
+	display: inline-block;
+	padding: 15px;
+	color: #353531;
+}
+
+nav ul li + li 
+{ 
+	border-left: 1px solid #353531;
+}
+
+nav ul li a
+{
+	color: #E7CDC6;
+	text-decoration: none;
+}
+
+nav ul li a:hover
+{
+	color: #BA0E31;
+}
+
+nav ul li.right
+{
+	float: right;
+	border: 0;
+}
+
+nav ul li.right a
+{
+	color: #00B31B;
+}
+
+nav ul li.right a:hover
+{
+	color: #BA0E31;
+	text-decoration: underline;
+}
+
+.inner-wrapper
+{
+	float: left;
+	width: 100%;
+	display: flex;
 	align-items: center;
 	justify-content: center;
+	height: 100%;
 }
 
-div.parent 
+#information
 {
-    height: 100%;
+	float: left;
+	width: 60%;
 }
 
-form
+#information h1
 {
-	padding: 20px;
-	border: 1px solid white;
+	font-size: 400%;
+	margin-left: 10%;
+	margin-top: 0;
 }
 
-.login input[type=text], .login input[type=password] 
+#information h2
 {
-    width: 100%;
+	font-size: 200%;
+	margin-left: 10%;
+}
+
+#register
+{
+	float: right;
+	width: 40%;
+}
+
+#register input[type=text], #register input[type=password], #register input[type=email] 
+{
+	width: 80%;
+    display: block;
     padding: 12px 0px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
+    margin: 20px auto;
+    color: #353531;
+    font-size: 120%;
 }
 
-.register input[type=text], .register input[type=password], .register input[type=email] 
-{
-    width: 100%;
-    padding: 12px 0px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-}
-
-.register input[type=radio]
-{
-	margin-left: 10px;
-	margin-right: 5px;
-}
-
-button
+#register ::-webkit-input-placeholder
 {
 	padding: 10px;
 }
 
-.center
+#register ::-moz-placeholder 
 {
-	/* center div inside parent */
-	display: table;
-    margin: auto;
-	
-	/* center elements */
-	text-align: center;
-    vertical-align: middle;
+	padding: 10px;
+}
+
+#register :-ms-input-placeholder 
+{
+	padding: 10px;
+}
+
+#register :-moz-placeholder 
+{
+	padding: 10px;
+}
+
+#userType
+{
+    margin: 0 auto;
+    text-align: center;
+}
+
+#register input[type=radio]
+{
+    margin: 10px 5px 10px 10px;
+    padding: 10px;
+}
+
+label
+{
+    font-size: 150%;
+}
+
+button
+{
+	display: block;
+	margin: 10px auto;
+	padding: 10px;
+    color: #353531;
+    border-radius: 10px;
+    font-size: 150%;
+    background-color: #1CB041;
+    color: #E7CDC6;
+	width: 50%;
 }
