added styling for side bar

--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,7 @@ header
 
 nav
 {
+	float: right;
 	padding-top: 10px;
 }
 
@@ -67,11 +68,6 @@ nav ul li a:hover
 	color: #BA0E31;
 }
 
-nav ul li.right
-{
-	float: right;
-}
-
 .inner-wrapper
 {
 	float: left;
@@ -98,7 +94,7 @@ nav ul li.right
 
 #information-inner
 {
-	margin: 30px;
+	margin-right: 20px;
 }
 
 .issue
@@ -108,7 +104,12 @@ nav ul li.right
 
 table
 {
-	width: 100%;1
+	width: 100%;
+}
+
+table tr
+{
+	border: 1px solid #000;
 }
 
 table tr td, table tr th
@@ -151,4 +152,41 @@ table tr th
 	height: 25px;
 	background: url(../img/view_icon.png) no-repeat center;
 	background-size: 25px;
+}
+
+#information-inner div
+{
+	background-color: #66665E;
+	padding: 10px;
+	margin: 20px auto 20px auto;
+	border: 1px solid #000;
+}
+
+#profile
+{
+	padding: 20px
+}
+
+#information-inner h1
+{
+	color: #BA0E31;
+	background-color: #00B31B;
+	margin: -10px -10px 10px -10px;
+	padding: 10px;
+	font-size: 170%;
+	border-bottom: 1px solid #000;
+}
+
+#information-inner h2
+{
+	font-size: 130%;
+	margin-bottom: 10px;
+}
+
+hr
+{
+    border-style: inset;
+    border-width: 1px;
+    margin: 20px 0 20px 0;
+	border-color: #BA0E31;
 }
